# cas-backup

./: README.md  pyproject.toml
src/casbackup/: __init__.py  __main__.py  config.py  repo.py
src/casbackup/backup/: __init__.py  manifest.py  metadata.py  restore.py  scanner.py  snapshot.py  verify.py
src/casbackup/cas/: __init__.py  chunker.py  compress.py  crypto.py  formatver.py  gc.py  hasher.py  index.py  lock.py  objectstore.py  packfile.py
src/casbackup/cas/backend/: __init__.py  base.py  local.py
src/casbackup/cli/: cmd_backup.py  cmd_check.py  cmd_init.py  cmd_list.py  cmd_prune.py  cmd_restore.py  main.py
